--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,6 @@
 new in 2.0
+Endless mode now starts the player with 10,000 health instead of 1,000. This provides a better chance of survival against harder difficulties with spawned guards.
+Fixed an issue where cars would disappear between levels 4 and 6 in endless mode.
 Added descriptions to the game mode options found in the start game menu.
 Added an Endless Mode to the game. Players can now choose between Normal Mode and Endless Mode before starting a game. In Endless Mode, gameplay difficulty gradually increases over time without a final level, encouraging long play sessions and making session-based achievements more meaningful.
 Addressed an issue where the behind pitch decrease option wasn't working propperly in the game when it was disabled in the settings menu.
