--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.0
+Added a keyboard shortcut to check the position of the winning door in the endless game mode. This shortcut is also in the readme file as well.
 Endless mode now starts the player with 10,000 health instead of 1,000. This provides a better chance of survival against harder difficulties with spawned guards.
 Fixed an issue where cars would disappear between levels 4 and 6 in endless mode.
 Added descriptions to the game mode options found in the start game menu.
