--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.0
+Adjusted the Endless Mode progression for better difficulty scaling. Previously, the Endless Mode would overwhelm players early on by spawning guards, cars, and keys all at once from level 2. From now on, enemies and other objects are introduced at a much gradual rate across levels.
 Added a keyboard shortcut to check the position of the winning door in the endless game mode. This shortcut is also in the readme file as well.
 Endless mode now starts the player with 10,000 health instead of 1,000. This provides a better chance of survival against harder difficulties with spawned guards.
 Fixed an issue where cars would disappear between levels 4 and 6 in endless mode.
