--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,7 +1,9 @@
 new in 2.0
-Adjusted the Endless Mode progression for better difficulty scaling. Previously, the Endless Mode would overwhelm players early on by spawning guards, cars, and keys all at once from level 2. From now on, enemies and other objects are introduced at a much gradual rate across levels 1 through 6.
+Made it so the machine gun is only available in the endless game mode. This also includes the restriction of keys to check and reload the ammo for it. The readme file's keyboard command section is also updated to reflect this change as well.
+The endless game Mode has now been completely rebalanced to match the Normal game Mode for the first 6 levels. This offers a gradual and familiar introduction before the difficulty of the game increases. After level 6, the mode will start ramping up with more enemies and collectibles.
+Adjusted the Endless Mode progression for better difficulty scaling. Previously, the Endless Mode would overwhelm players early on by spawning guards, cars, and keys all at once.
 Added a keyboard shortcut to check the position of the winning door in the endless game mode. This shortcut is also in the readme file as well.
-Endless mode now starts the player with 10,000 health instead of 1,000. This provides a better chance of survival against harder difficulties with spawned guards.
+Made it so endless mode starts the player with 10,000 health instead of 1,000. This provides a better chance of survival against harder difficulties with spawned guards.
 Fixed an issue where cars would disappear between levels 4 and 6 in endless mode.
 Added descriptions to the game mode options found in the start game menu.
 Added an Endless Mode to the game. Players can now choose between Normal Mode and Endless Mode before starting a game. In Endless Mode, gameplay difficulty gradually increases over time without a final level, encouraging long play sessions and making session-based achievements more meaningful.
