--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,8 @@
 new in 2.0
+Added a confirmation prompt when pressing Escape during gameplay. Players are now warned for quitting the current game session. This allows them to abort the action if pressed accidentally.
+Made it so the post game copy prompt option found in the settings menu also controls the copy prompt found in the pause menu.
+Made it so session based achievements don't get coppied along with your actual in-game statistics when using the pause menu or the post game copy prompt after death or victory.
+Added a pause menu to the normal and endless game modes. You can resume, view and copy aall of your session-based stats there.
 Made it so pressing the letter L tells you wich game mode you are on after announcing your current level.
 Made it so the machine gun is only available in the endless game mode. This also includes the restriction of keys to check and reload the ammo for it. The readme file's keyboard command section is also updated to reflect this change as well.
 The endless game Mode has now been completely rebalanced to match the Normal game Mode for the first 6 levels. This offers a gradual and familiar introduction before the difficulty of the game increases. After level 6, the mode will start ramping up with more enemies and collectibles.
