--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.0
+You can now directly quit the game session right from within the pause menu.
 Added the ability to adjust the ambience and music volumes of the game. You can press the page up or down keys to adjust the music, and home or end to adjust the ambience. These settings are automaticly saved the next time you start a new game session.
 Added a confirmation prompt when pressing Escape during gameplay. Players are now warned for quitting the current game session. This allows them to abort the action if pressed accidentally.
 Made it so the post game copy prompt option found in the settings menu also controls the copy prompt found in the pause menu.
