--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.0
+Added an option in the pause menu to copy your current level and game mode to the clipboard for easy sharing or progress tracking.
 Fixed a bug where the game failed to restart propperly upon activating it in the main menu.
 Implemented a health warning system in all of the game modes. If your health gets below a certain threshold, a heartbeat sound will play to signify that you're in real danger of dying.
 You can now directly quit the game session right from within the pause menu.
